[package]
name = "crc20-token"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CRC-20 Fungible Token Standard for Silica Protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
silica-contract-sdk = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
