[package]
name = "crc721-contract"
version = "0.1.0"
edition = "2024"
authors = ["Silica Team"]
license = "MIT"
description = "CRC-721 Non-Fungible Token Standard implementation for Silica Protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
silica-contract-sdk = { workspace = true }
serde = { workspace = true }
postcard =  { workspace = true }
blake3 =  { workspace = true }
hex = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true